borrowing and fine crud operations done

--- a/Library_API/appsettings.json
+++ b/Library_API/appsettings.json
@@ -31,3 +31,10 @@
   },
   "AllowedHosts": "*"
 }
+
+/*
+  Statuses:
+    Fine Status: outstanding AND paid
+    BookCopy Status: lost, borrowed AND available
+    Borrowing Status: lost AND returned
+*/
