User management is done

--- a/Library_API/appsettings.json
+++ b/Library_API/appsettings.json
@@ -29,6 +29,9 @@
       "Application": "Library API"
     }
   },
+  "Jwt": {
+    "Key": "WB@#5866gfs^&*%tghBFWHVH6d!!_-WER--=rdtrxcrr58"
+  },
   "AllowedHosts": "*"
 }
 
