Auth is complete, I also added a worker service

--- a/Library_API/appsettings.json
+++ b/Library_API/appsettings.json
@@ -29,8 +29,12 @@
       "Application": "Library API"
     }
   },
+  "EmailSettings": {
+    "MyEmailAddress": "paballoelisa22@gmail.com",
+    "Password": "ywhx kbap gpvs gpwu"
+  },
   "Jwt": {
-    "Key": "WB@#5866gfs^&*%tghBFWHVH6d!!_-WER--=rdtrxcrr58"
+    "Key": "002c4171-2d6b-4c1d-972b-9bc619768f1a-4d9e7015-a661-4e26-a36f-437bccb8abc2"
   },
   "AllowedHosts": "*"
 }
